# supervillain-rs

./: .gitignore  .kata.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THE-128-fix-email-delivery.md  TODO.md  build.rs
.claude/: settings.local.json
docs/superpowers/plans/: 2026-07-06-account-scoped-splits.md
docs/superpowers/specs/: 2026-07-06-account-scoped-splits-design.md  2026-07-06-inbox-precache-playwright-design.md
infra/: SETUP.md  bootstrap.sh
infra/tests/: test_bootstrap.sh
scripts/: check-and-update.sh  install-macos-app.sh  install-omarchy.sh  supervillain-launcher-linux.sh  supervillain-launcher.sh  upgrade.sh
scripts/tests/: test_check_and_update.sh  test_launcher.sh  test_launcher_bind.sh  test_launcher_linux.sh  test_launcher_stale.sh
src/: accounts.rs  calendar.rs  error.rs  glob.rs  gmail.rs  jmap.rs  lib.rs  main.rs  oauth.rs  outlook.rs  prefetch.rs  provider.rs  provider_utils.rs  rate_limit.rs  routes.rs  search.rs  splits.rs  theme.rs  timezone.rs  types.rs  validate.rs
src/platform/: desktop.rs  mod.rs
static/: api.js  app.js  index.html  style.css
static/mobile/: app.js  index.html  jmap.js  manifest.json  sw.js
tests/: infra_test.rs  scripts_test.rs
