[package]
name = "vimmail"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "supervillain"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# Explicit tokio features (not "full") so iOS builds can opt out of rt-multi-thread
# per Tauri-mobile guidance. Add features here as the codebase needs them.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util", "fs"] }
# rustls-tls (not native-tls) keeps reqwest portable to iOS (Apple Network framework
# integration via native-tls is platform-specific; rustls is pure Rust).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
url = "2"

[dev-dependencies]
tempfile = "3"
